# cchess

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  cchess.c  cchess.h  config.c  config.h  config_p.h  defintions.h  eval.c  logger.c  logger.h  move.c  move.h  path_node.c  path_node.h  piece.c  piece.h  pieces.h  position.c  position.h  print.c
bot/: CMakeLists.txt  ccbot.c  ccbot.h
bot/test/: CMakeLists.txt  ccbot_test.c
client/: CMakeLists.txt  stream_client.c  stream_client.h
exec/: CMakeLists.txt  cchess.c  cchess_runner.c  tcpclient.c  tcpserver.c
kubernetes/: dep-cchess-evalservice.yaml  dep-cchess-moveservice.yaml  dep-jenkins.yaml  deploy.yaml  kustomization.yaml  pv-cchess-logs.yaml  pv-node-a-cchess-logs.yaml  pv-node-b-cchess-logs.yaml  pvc-cchess-moveservice.yaml  service.yaml  svc-cchess-evalservice.yaml  svc-cchess-moveservice.yaml
lib/: CMakeLists.txt  config.c  config.h  config_p.h  logger.c  move.c  move.h  piece.c  piece.h  position.c  position.h  print.c
lib/test/: CMakeLists.txt  config_test.c  move_test.c
server/: CMakeLists.txt  eval_service.h  move_service.c  move_service.h  stream_server.c  stream_server.h
services/: CMakeLists.txt
services/eval/: CMakeLists.txt  Dockerfile  acceptance_test.sh  evalclient.c  evalserver.c
services/eval/request/: CMakeLists.txt  request_eval.c  request_eval.h
services/eval/service/: CMakeLists.txt  eval_service.c  eval_service.h
services/move/: CMakeLists.txt  Dockerfile  acceptance_test.sh  moveclient.c  moveserver.c
services/move/request/: CMakeLists.txt  request_move.c  request_move.h
services/move/service/: move_service.c
test/: CMakeLists.txt  acceptance_test.sh  config_test.c  logger_test.c  move_test.c  piece_test.c  position_test.c
